--- a/index.html
+++ b/index.html
@@ -1,174 +1,202 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Track BG</title>
 
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600&display=swap" rel="stylesheet">
+  <!-- Prompt Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <!-- FullCalendar -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.css">
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
 
   <style>
-    body {
-      font-family: 'Prompt', sans-serif;
-      background: linear-gradient(180deg, #0b0f1f, #14182f);
-      color: #fff;
-      margin: 0;
-      padding: 16px;
+    :root {
+      --bg-main: #0b0f1f;
+      --bg-card: #151a33;
+      --accent: #8b5cf6;
+      --accent-soft: #a78bfa;
+      --text-main: #f8fafc;
+      --text-sub: #b6bdd6;
+      --border-soft: #2a2f55;
     }
 
-    h2 {
-      text-align: center;
-      margin-bottom: 12px;
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      padding: 24px;
+      font-family: 'Prompt', system-ui, sans-serif;
+      background: radial-gradient(circle at top, #1b2150, var(--bg-main));
+      color: var(--text-main);
+    }
+
+    .container {
+      max-width: 460px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background: linear-gradient(180deg, #171c38, var(--bg-card));
+      border-radius: 22px;
+      padding: 20px;
+      margin-bottom: 22px;
+      box-shadow: 0 20px 40px rgba(0,0,0,.45);
+    }
+
+    h1 {
+      font-size: 22px;
+      margin: 0 0 4px;
       font-weight: 600;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .subtitle {
+      font-size: 13px;
+      color: var(--text-sub);
+      margin-bottom: 14px;
+    }
+
+    textarea {
+      width: 100%;
+      min-height: 90px;
+      background: #0b0f1f;
+      border: 1px solid var(--border-soft);
+      border-radius: 16px;
+      padding: 12px;
+      color: var(--text-main);
+      font-family: 'Prompt', sans-serif;
+      font-size: 14px;
+      line-height: 1.4;
+      resize: vertical;
+    }
+
+    textarea::placeholder {
+      color: #6e75a8;
+    }
+
+    button {
+      width: 100%;
+      margin-top: 16px;
+      padding: 14px;
+      border-radius: 16px;
+      border: none;
+      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
+      color: white;
+      font-size: 15px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: transform .15s ease, box-shadow .15s ease;
+    }
+
+    button:hover {
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(139,92,246,.4);
+    }
+
+    .hint {
+      text-align: center;
+      font-size: 12px;
+      color: var(--text-sub);
+      margin-top: 10px;
     }
 
     #calendar {
-      max-width: 480px;
-      margin: auto;
-      background: #0e1330;
-      border-radius: 16px;
-      padding: 12px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.3);
+      min-height: 480px;
     }
 
-    .fc .fc-daygrid-day.fc-day-today {
-      background: rgba(180, 120, 255, 0.25) !important;
-      box-shadow: inset 0 0 0 2px #b97cff;
+    /* FullCalendar theme tweak */
+    .fc {
+      color: var(--text-main);
+      font-family: 'Prompt', sans-serif;
+    }
+
+    .fc-toolbar-title {
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    .fc-daygrid-day-number {
+      color: var(--text-sub);
     }
 
     .fc-event {
-      border-radius: 10px !important;
-      padding: 2px 6px;
-      font-size: 0.85em;
+      background: linear-gradient(135deg, var(--accent), var(--accent-soft));
       border: none;
-    }
-
-    /* Modal */
-    #modal {
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,.6);
-      display: none;
-      align-items: center;
-      justify-content: center;
-      z-index: 999;
-    }
-
-    .modal-card {
-      background: #151a3b;
-      border-radius: 18px;
-      padding: 20px;
-      width: 90%;
-      max-width: 320px;
-      text-align: center;
-      box-shadow: 0 20px 40px rgba(0,0,0,.4);
-    }
-
-    .modal-card h3 {
-      margin: 0 0 10px;
-    }
-
-    .modal-card button {
-      margin-top: 12px;
-      width: 100%;
-      padding: 10px;
-      border-radius: 12px;
-      border: none;
-      font-family: 'Prompt';
-      font-size: 14px;
-    }
-
-    .btn-delete {
-      background: #ff5c5c;
-      color: white;
-    }
-
-    .btn-close {
-      background: #2c326a;
-      color: white;
+      border-radius: 8px;
+      padding: 2px 4px;
+      font-size: 12px;
     }
   </style>
 </head>
 <body>
 
-<h2>🪐 Track BG</h2>
-<div id="calendar"></div>
+  <div class="container">
 
-<!-- Modal -->
-<div id="modal">
-  <div class="modal-card">
-    <h3 id="m-title"></h3>
-    <p id="m-time"></p>
-    <button class="btn-delete" onclick="confirmDelete()">🧹 ลบคิว BG</button>
-    <button class="btn-close" onclick="closeModal()">ปิด</button>
+    <div class="card">
+      <h1>🪐 Track BG</h1>
+      <div class="subtitle">monsterbrother · Google Calendar</div>
+
+      <textarea id="raw" placeholder="🪐16/12&#10;👾12:00 BG แมทธิว"></textarea>
+
+      <button onclick="add()">➕ เพิ่มลงปฏิทิน</button>
+      <div class="hint">แตะที่คิวในปฏิทินเพื่อลบ</div>
+    </div>
+
+    <div class="card">
+      <div id="calendar"></div>
+    </div>
+
   </div>
-</div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbzTn2UJzcWMz079IuGDM_unHNrRNlBhYtaY-YQZl6d9hCSQ0jJyUOgfam-Phi1e1XEBsw/exec";
-let selectedEventId = null;
+  const API_URL = "https://script.google.com/macros/s/AKfycbzTn2UJzcWMz079IuGDM_unHNrRNlBhYtaY-YQZl6d9hCSQ0jJyUOgfam-Phi1e1XEBsw/exec";
+  let calendar;
 
-const bgColors = {
-  'แมทธิว': '#b97cff',
-  'บอส': '#6ecbff'
-};
+  document.addEventListener('DOMContentLoaded', function () {
+    const el = document.getElementById('calendar');
 
-document.addEventListener('DOMContentLoaded', () => {
-  const calendar = new FullCalendar.Calendar(
-    document.getElementById('calendar'),
-    {
+    calendar = new FullCalendar.Calendar(el, {
       initialView: 'dayGridMonth',
-      height: 'auto',
-      events: fetchEvents,
-      eventClick(info) {
-        selectedEventId = info.event.id;
-        document.getElementById('m-title').innerText = info.event.title;
-        document.getElementById('m-time').innerText = info.event.start.toLocaleString();
-        document.getElementById('modal').style.display = 'flex';
+      height: 480,
+      events: function (info, successCallback) {
+        fetch(API_URL + '?action=getEvents')
+          .then(r => r.json())
+          .then(successCallback);
+      },
+      eventClick: function(info) {
+        const ev = info.event;
+        if (!confirm('ยืนยันลบคิวนี้?\n' + ev.title)) return;
+
+        fetch(API_URL, {
+          method: 'POST',
+          body: JSON.stringify({ action: 'delete', id: ev.id })
+        }).then(() => calendar.refetchEvents());
       }
-    }
-  );
+    });
 
-  calendar.render();
+    calendar.render();
+  });
 
-  function fetchEvents(info, success) {
-    fetch(API_URL + '?action=getEvents')
+  function add() {
+    const raw = document.getElementById('raw').value;
+
+    fetch(API_URL, {
+      method: 'POST',
+      body: JSON.stringify({ action: 'addRaw', raw })
+    })
       .then(r => r.json())
-      .then(data => {
-        success(data.map(e => {
-          let color = '#888';
-          Object.keys(bgColors).forEach(name => {
-            if (e.title.includes(name)) color = bgColors[name];
-          });
-          return {
-            id: e.id,
-            title: e.title,
-            start: e.start,
-            end: e.end,
-            backgroundColor: color
-          };
-        }));
+      .then(() => {
+        calendar.refetchEvents();
+        document.getElementById('raw').value = '';
       });
   }
-});
-
-function closeModal() {
-  document.getElementById('modal').style.display = 'none';
-}
-
-function confirmDelete() {
-  if (!confirm('แน่ใจว่าต้องการลบคิวนี้?')) return;
-
-  fetch(API_URL, {
-    method: 'POST',
-    body: JSON.stringify({ action: 'delete', id: selectedEventId })
-  }).then(() => location.reload());
-}
 </script>
 
 </body>
