--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Track BG</title>
+  <title>Track BG – Message Mode</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.11/index.global.min.js"></script>
 
   <style>
     body {
@@ -25,67 +22,88 @@
       font-weight: 600;
     }
 
-    #calendar {
-      width: 100%;
+    .card {
       max-width: 480px;
-      min-height: 70vh;
       margin: auto;
       background: #0e1330;
-      border-radius: 16px;
-      padding: 8px;
+      border-radius: 18px;
+      padding: 16px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.35);
     }
 
-    .fc {
+    textarea {
+      width: 100%;
+      min-height: 80px;
+      background: #0b0f1f;
+      border: 1px solid #2a2f55;
+      border-radius: 14px;
+      padding: 12px;
+      color: #fff;
       font-family: 'Prompt', sans-serif;
+      font-size: 14px;
+      resize: vertical;
     }
 
-    .fc-event {
-      border-radius: 10px;
-      font-size: 0.85em;
+    button {
+      width: 100%;
+      margin-top: 12px;
+      padding: 14px;
+      border-radius: 14px;
       border: none;
+      background: linear-gradient(135deg, #8b5cf6, #a78bfa);
+      color: white;
+      font-size: 15px;
+      font-weight: 500;
+      cursor: pointer;
     }
 
-    .fc-daygrid-day.fc-day-today {
-      background: rgba(180,120,255,0.25);
+    .messages {
+      margin-top: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .bubble {
+      background: #1a1f46;
+      border-radius: 16px;
+      padding: 12px 14px;
+      font-size: 14px;
+      line-height: 1.4;
+      box-shadow: 0 4px 10px rgba(0,0,0,.3);
+      animation: pop .2s ease-out;
+    }
+
+    @keyframes pop {
+      from { transform: scale(.95); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
   </style>
 </head>
 <body>
 
-<h2>🪐 Track BG</h2>
-<div id="calendar"></div>
+<h2>💬 Track BG – Log</h2>
+
+<div class="card">
+  <textarea id="input" placeholder="พิมพ์ข้อความ เช่น\n🪐16/12\n👾12:00 BG แมทธิว"></textarea>
+  <button onclick="addMessage()">➕ บันทึกข้อความ</button>
+
+  <div class="messages" id="messages"></div>
+</div>
 
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbxCmLDqj_AmsYypgcC1ep58lW9CiRxkETle-M17Cu9kn2Re_VM8pbSeujh3g-cMbEzmqA/exec";
+function addMessage() {
+  const input = document.getElementById('input');
+  const text = input.value.trim();
+  if (!text) return;
 
-window.addEventListener('DOMContentLoaded', () => {
-  const el = document.getElementById('calendar');
-  if (!el) {
-    console.error('ไม่พบ calendar');
-    return;
-  }
+  const bubble = document.createElement('div');
+  bubble.className = 'bubble';
+  bubble.innerText = text;
 
-  const calendar = new FullCalendar.Calendar(el, {
-    initialView: 'dayGridMonth',
-    height: 'auto',
-    events: function(info, successCallback) {
-      fetch(API_URL + '?action=getEvents')
-        .then(res => res.json())
-        .then(data => {
-          const events = data.map(e => ({
-            id: e.id,
-            title: e.title,
-            start: e.start,
-            end: e.end
-          }));
-          successCallback(events);
-        })
-        .catch(err => console.error(err));
-    }
-  });
-
-  calendar.render();
-});
+  document.getElementById('messages').prepend(bubble);
+  input.value = '';
+}
 </script>
 
 </body>
