--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Track BG – Message Mode</title>
+  <title>Track BG – Message Log</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap" rel="stylesheet">
 
@@ -18,7 +18,7 @@
 
     h2 {
       text-align: center;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
       font-weight: 600;
     }
 
@@ -31,9 +31,8 @@
       box-shadow: 0 10px 30px rgba(0,0,0,.35);
     }
 
-    textarea {
+    textarea, input {
       width: 100%;
-      min-height: 80px;
       background: #0b0f1f;
       border: 1px solid #2a2f55;
       border-radius: 14px;
@@ -41,12 +40,16 @@
       color: #fff;
       font-family: 'Prompt', sans-serif;
       font-size: 14px;
+      margin-bottom: 10px;
+    }
+
+    textarea {
+      min-height: 80px;
       resize: vertical;
     }
 
     button {
       width: 100%;
-      margin-top: 12px;
       padding: 14px;
       border-radius: 14px;
       border: none;
@@ -65,14 +68,41 @@
     }
 
     .bubble {
-      background: #1a1f46;
       border-radius: 16px;
       padding: 12px 14px;
       font-size: 14px;
       line-height: 1.4;
       box-shadow: 0 4px 10px rgba(0,0,0,.3);
+      position: relative;
       animation: pop .2s ease-out;
     }
+
+    .bubble small {
+      display: block;
+      font-size: 11px;
+      opacity: .7;
+      margin-top: 6px;
+    }
+
+    .bubble button {
+      position: absolute;
+      top: 6px;
+      right: 8px;
+      background: transparent;
+      border: none;
+      color: #fff;
+      font-size: 14px;
+      cursor: pointer;
+      opacity: .6;
+    }
+
+    .bubble button:hover {
+      opacity: 1;
+    }
+
+    .bg-matthew { background: linear-gradient(135deg, #b97cff, #8b5cf6); }
+    .bg-boss { background: linear-gradient(135deg, #6ecbff, #3b82f6); }
+    .bg-default { background: #1a1f46; }
 
     @keyframes pop {
       from { transform: scale(.95); opacity: 0; }
@@ -85,6 +115,7 @@
 <h2>💬 Track BG – Log</h2>
 
 <div class="card">
+  <input id="search" placeholder="🔍 ค้นหาข้อความ" oninput="render()">
   <textarea id="input" placeholder="พิมพ์ข้อความ เช่น\n🪐16/12\n👾12:00 BG แมทธิว"></textarea>
   <button onclick="addMessage()">➕ บันทึกข้อความ</button>
 
@@ -92,18 +123,56 @@
 </div>
 
 <script>
+let logs = JSON.parse(localStorage.getItem('bgLogs') || '[]');
+
 function addMessage() {
   const input = document.getElementById('input');
   const text = input.value.trim();
   if (!text) return;
 
-  const bubble = document.createElement('div');
-  bubble.className = 'bubble';
-  bubble.innerText = text;
+  logs.unshift({
+    text,
+    time: new Date().toISOString()
+  });
 
-  document.getElementById('messages').prepend(bubble);
+  localStorage.setItem('bgLogs', JSON.stringify(logs));
   input.value = '';
+  render();
 }
+
+function deleteMessage(index) {
+  if (!confirm('ลบข้อความนี้?')) return;
+  logs.splice(index, 1);
+  localStorage.setItem('bgLogs', JSON.stringify(logs));
+  render();
+}
+
+function getColor(text) {
+  if (text.includes('แมทธิว')) return 'bg-matthew';
+  if (text.includes('บอส')) return 'bg-boss';
+  return 'bg-default';
+}
+
+function render() {
+  const q = document.getElementById('search').value.toLowerCase();
+  const box = document.getElementById('messages');
+  box.innerHTML = '';
+
+  logs.forEach((l, i) => {
+    if (!l.text.toLowerCase().includes(q)) return;
+
+    const div = document.createElement('div');
+    div.className = `bubble ${getColor(l.text)}`;
+    div.innerHTML = `
+      <button onclick="deleteMessage(${i})">🧹</button>
+      ${l.text.replace(/\n/g, '<br>')}
+      <small>⏰ ${new Date(l.time).toLocaleString('th-TH')}</small>
+    `;
+    box.appendChild(div);
+  });
+}
+
+render();
 </script>
 
 </body>
